--- a/cloudfront/package.json
+++ b/cloudfront/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "@intlify/vue-i18n-loader": "^0.6.1",
     "@kazupon/vue-i18n-loader": "^0.5.0",
+    "amazon-connect-chatjs": "^1.4.0",
+    "amazon-connect-streams": "^2.4.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.1.0",
@@ -23,6 +25,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
+    "v-tooltip": "^2.1.3",
     "vue-i18n": "^8.15.4",
     "vue-search-select": "^2.9.3"
   },
@@ -44,7 +47,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
